book-code-snippets/ch8-constrainttemplate-advance.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos
        violation[{"msg": msg}] {
          image := input.review.object.spec.containers[_].image
          not startswith(image, "gcr.io/approved-repo")
          msg := sprintf("Image %v is not from an approved repository", [image])
        }
